--- a/ThirtyTwo/ThirtyTwo.Kernel32.csproj
+++ b/ThirtyTwo/ThirtyTwo.Kernel32.csproj
@@ -43,46 +43,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enumerations\ACCESS_RIGHTS.cs" />
-    <Compile Include="Enumerations\CHAR_ATTRIBUTES.cs" />
-    <Compile Include="Enumerations\CONSOLE_DISPLAY_MODE.cs" />
-    <Compile Include="Enumerations\CONSOLE_MODE.cs" />
-    <Compile Include="Enumerations\CONSOLE_READING_BEHAVIOR.cs" />
-    <Compile Include="Enumerations\CONSOLE_STANDARD_DEVICE.cs" />
-    <Compile Include="Enumerations\CONSOLE_WINDOW_EVENT.cs" />
-    <Compile Include="Enumerations\CTRL_EVENT.cs" />
-    <Compile Include="Enumerations\CTRL_KEY_STATE.cs" />
-    <Compile Include="Enumerations\HRESULT.cs" />
-    <Compile Include="Enumerations\INPUT_RECORD_EVENT_TYPE.cs" />
-    <Compile Include="Enumerations\MOUSE_BUTTON_STATE.cs" />
-    <Compile Include="Enumerations\MOUSE_EVENT.cs" />
-    <Compile Include="Enumerations\PSEUDO_CONSOLE_CREATION_OPTION.cs" />
-    <Compile Include="Enumerations\SECURITY_DESCRIPTOR_CONTROL.cs" />
-    <Compile Include="Enumerations\SELECTION_INDICATOR.cs" />
-    <Compile Include="Enumerations\SHARE_MODE.cs" />
-    <Compile Include="Enumerations\SYSTEM_ERROR_CODES.cs" />
-    <Compile Include="Enumerations\VIRTUAL_KEY.cs" />
+    <Compile Include="Enumerations\AccessRights.cs" />
+    <Compile Include="Enumerations\CharacterAttributes.cs" />
+    <Compile Include="Enumerations\ConsoleDisplayMode.cs" />
+    <Compile Include="Enumerations\ConsoleMode.cs" />
+    <Compile Include="Enumerations\ConsoleReadingBehavior.cs" />
+    <Compile Include="Enumerations\ConsoleStandardDevice.cs" />
+    <Compile Include="Enumerations\ConsoleWindowEvent.cs" />
+    <Compile Include="Enumerations\ControlEvent.cs" />
+    <Compile Include="Enumerations\ModifierKeyState.cs" />
+    <Compile Include="Enumerations\ResultHandle.cs" />
+    <Compile Include="Enumerations\InputRecordEventType.cs" />
+    <Compile Include="Enumerations\MouseButtonState.cs" />
+    <Compile Include="Enumerations\MouseEvent.cs" />
+    <Compile Include="Enumerations\PseudoConsoleCreationOption.cs" />
+    <Compile Include="Enumerations\SecurityDescriptorControl.cs" />
+    <Compile Include="Enumerations\SelectionIndicator.cs" />
+    <Compile Include="Enumerations\ShareMode.cs" />
+    <Compile Include="Enumerations\SystemErrorCodes.cs" />
+    <Compile Include="Enumerations\VirtualKey.cs" />
     <Compile Include="Kernel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structures\CHAR_INFO.cs" />
-    <Compile Include="Structures\CONSOLE_CURSOR_INFO.cs" />
-    <Compile Include="Structures\CONSOLE_FONT_INFO.cs" />
-    <Compile Include="Structures\CONSOLE_FONT_INFOEX.cs" />
-    <Compile Include="Structures\CONSOLE_HISTORY_INFO.cs" />
-    <Compile Include="Structures\CONSOLE_READCONSOLE_CONTROL.cs" />
-    <Compile Include="Structures\CONSOLE_SCREEN_BUFFER_INFO.cs" />
-    <Compile Include="Structures\CONSOLE_SCREEN_BUFFER_INFOEX.cs" />
-    <Compile Include="Structures\CONSOLE_SELECTION_INFO.cs" />
-    <Compile Include="Structures\COORD.cs" />
-    <Compile Include="Structures\FOCUS_EVENT_RECORD.cs" />
-    <Compile Include="Structures\INPUT_RECORD.cs" />
-    <Compile Include="Structures\KEY_EVENT_RECORD.cs" />
-    <Compile Include="Structures\MENU_EVENT_RECORD.cs" />
-    <Compile Include="Structures\MOUSE_EVENT_RECORD.cs" />
-    <Compile Include="Structures\SECURITY_ATTRIBUTES.cs" />
-    <Compile Include="Structures\SECURITY_DESCRIPTOR.cs" />
-    <Compile Include="Structures\SMALL_RECT.cs" />
-    <Compile Include="Structures\WINDOW_BUFFER_SIZE_RECORD.cs" />
+    <Compile Include="Structures\CharacterInformation.cs" />
+    <Compile Include="Structures\ConsoleCursorInformation.cs" />
+    <Compile Include="Structures\ConsoleFontInformation.cs" />
+    <Compile Include="Structures\ConsoleFontInformationExtended.cs" />
+    <Compile Include="Structures\ConsoleHistoryInformation.cs" />
+    <Compile Include="Structures\ReadConsoleControl.cs" />
+    <Compile Include="Structures\ConsoleScreenBufferInformation.cs" />
+    <Compile Include="Structures\ConsoleScreenBufferInformationExtended.cs" />
+    <Compile Include="Structures\ConsoleSelectionInformation.cs" />
+    <Compile Include="Structures\Coordinate.cs" />
+    <Compile Include="Structures\FocusEventRecord.cs" />
+    <Compile Include="Structures\InputRecord.cs" />
+    <Compile Include="Structures\KeyEventRecord.cs" />
+    <Compile Include="Structures\MenuEventRecord.cs" />
+    <Compile Include="Structures\MouseEventRecord.cs" />
+    <Compile Include="Structures\SecurityAttributes.cs" />
+    <Compile Include="Structures\SecurityDescriptor.cs" />
+    <Compile Include="Structures\SmallRectangle.cs" />
+    <Compile Include="Structures\WindowBufferSizeRecord.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
