--- a/NuGet/.nuspec
+++ b/NuGet/.nuspec
@@ -11,7 +11,7 @@
 
 		<tags>win32 win32api kernel32 kernel32dll thirtytwo interoperability interop</tags>
 
-		<icon>.\ThirtyTwo.png</icon>
+		<icon>.\NuGet.png</icon>
 		<projectUrl>https://github.com/thirtytwointerops/kernel32</projectUrl>
 		<repository type="git" url="https://github.com/thirtytwointerops/kernel32.git" branch="main" />
 		<copyright>Copyright © 2024 ThirtyTwo Interops</copyright>
@@ -25,7 +25,7 @@
 	</metadata>
 
 	<files>
-		<file src=".\ThirtyTwo.png" target="" />
+		<file src=".\NuGet.png" target="" />
 		<file src="README.md" target="" />
 
 		<file src="..\ThirtyTwo\bin\Release\ThirtyTwo.Kernel32.dll" target="lib\net40\" />
