Update the Package

--- a/Package/.nuspec
+++ b/Package/.nuspec
@@ -5,16 +5,16 @@
 		<id>ThirtyTwo.Kernel32</id>
 		<version>1.0.0.3</version>
 		<description>Windows API Kernel32 interop library for the .NET Framework.</description>
-		<authors>Eduardo Baginski Costa, ThirtyTwo Interops, Novus Inspire</authors>
+		<authors>Eduardo Baginski Costa, ThirtyTwo Interops</authors>
 		<owners>eduardobcosta</owners>
 		<readme>README.md</readme>
 
 		<tags>win32 win32api kernel32 kernel32dll thirtytwo interoperability interop</tags>
 
-		<icon>.\icon.png</icon>
+		<icon>.\thirtytwo.png</icon>
 		<projectUrl>https://github.com/thirtytwointerops/kernel32</projectUrl>
 		<repository type="git" url="https://github.com/thirtytwointerops/kernel32.git" branch="main" />
-		<copyright>Copyright © 2024 ThirtyTwo Interops and Novus Inspire</copyright>
+		<copyright>Copyright © 2024 ThirtyTwo Interops</copyright>
 
 		<requireLicenseAcceptance>true</requireLicenseAcceptance>
 		<license type="expression">MIT</license>
@@ -25,7 +25,7 @@
 	</metadata>
 
 	<files>
-		<file src=".\icon.png" target="" />
+		<file src=".\thirtytwo.png" target="" />
 		<file src="README.md" target="" />
 
 		<file src="..\Source\bin\Release\ThirtyTwo.Kernel32.dll" target="lib\net40\" />
