--- a/Source/ThirtyTwo.Kernel32.csproj
+++ b/Source/ThirtyTwo.Kernel32.csproj
@@ -1,91 +1,64 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D7BA9BD7-2EDF-4E74-BD15-B32C8D432AFB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ThirtyTwo.Kernel32</RootNamespace>
-    <AssemblyName>ThirtyTwo.Kernel32</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <TargetFramework>net8.0-windows10.0.26100.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <ApplicationIcon>ThirtyTwo.ico</ApplicationIcon>
+    <Title>$(AssemblyName)</Title>
+    <Authors>eduardobcosta</Authors>
+    <Company>ThirtyTwo Interops</Company>
+    <Description>The Kernel32, developed by a community specialized in the interoperability of Windows APIs, enables the use of all functions available in the Kernel32 API. It offers meticulously organized and named structures and enumerations, all based on official Microsoft documentation.</Description>
+    <Copyright>Copyright (c) 2024 ThirtyTwo Interops</Copyright>
+    <PackageProjectUrl>https://github.com/thirtytwointerops/kernel32</PackageProjectUrl>
+    <PackageIcon>ThirtyTwo.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/thirtytwointerops/kernel32.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>win32;win32api;kernel;kernel32;kernel32dll;thirtytwo;interoperability;interop;windows</PackageTags>
+    <AssemblyVersion>1.0.0.4</AssemblyVersion>
+    <FileVersion>1.0.0.4</FileVersion>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.0.0.4</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>True</Optimize>
+    <DebugType>none</DebugType>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>
-    </DocumentationFile>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
   </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Content Include="ThirtyTwo.ico" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Enumerations\AccessRights.cs" />
-    <Compile Include="Enumerations\CharacterAttributes.cs" />
-    <Compile Include="Enumerations\ConsoleDisplayMode.cs" />
-    <Compile Include="Enumerations\ConsoleMode.cs" />
-    <Compile Include="Enumerations\ConsoleReadingBehavior.cs" />
-    <Compile Include="Enumerations\ConsoleStandardDevice.cs" />
-    <Compile Include="Enumerations\ConsoleWindowEvent.cs" />
-    <Compile Include="Enumerations\ControlEvent.cs" />
-    <Compile Include="Enumerations\ModifierKeyState.cs" />
-    <Compile Include="Enumerations\ResultHandle.cs" />
-    <Compile Include="Enumerations\InputRecordEventType.cs" />
-    <Compile Include="Enumerations\MouseButtonState.cs" />
-    <Compile Include="Enumerations\MouseEvent.cs" />
-    <Compile Include="Enumerations\PseudoConsoleCreationOption.cs" />
-    <Compile Include="Enumerations\SecurityDescriptorControl.cs" />
-    <Compile Include="Enumerations\SelectionIndicator.cs" />
-    <Compile Include="Enumerations\ShareMode.cs" />
-    <Compile Include="Enumerations\SystemErrorCodes.cs" />
-    <Compile Include="Enumerations\VirtualKey.cs" />
-    <Compile Include="Kernel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Structures\CharacterInformation.cs" />
-    <Compile Include="Structures\ConsoleCursorInformation.cs" />
-    <Compile Include="Structures\ConsoleFontInformation.cs" />
-    <Compile Include="Structures\ConsoleFontInformationExtended.cs" />
-    <Compile Include="Structures\ConsoleHistoryInformation.cs" />
-    <Compile Include="Structures\ReadConsoleControl.cs" />
-    <Compile Include="Structures\ConsoleScreenBufferInformation.cs" />
-    <Compile Include="Structures\ConsoleScreenBufferInformationExtended.cs" />
-    <Compile Include="Structures\ConsoleSelectionInformation.cs" />
-    <Compile Include="Structures\Coordinate.cs" />
-    <Compile Include="Structures\FocusEventRecord.cs" />
-    <Compile Include="Structures\InputRecord.cs" />
-    <Compile Include="Structures\KeyEventRecord.cs" />
-    <Compile Include="Structures\MenuEventRecord.cs" />
-    <Compile Include="Structures\MouseEventRecord.cs" />
-    <Compile Include="Structures\SecurityAttributes.cs" />
-    <Compile Include="Structures\SecurityDescriptor.cs" />
-    <Compile Include="Structures\SmallRectangle.cs" />
-    <Compile Include="Structures\WindowBufferSizeRecord.cs" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\Package\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\Package\ThirtyTwo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
+  <ItemGroup>
+    <None Update="ThirtyTwo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 </Project>
